@@ -18,11 +18,11 @@ Caching of WSDL and XSD files
 ------------------------------
 When the client is initialised it will automaticaly retrieve the wsdl file
 passed as argument. This wsdl file generally references various other wsdl and
-xsd files. By default Zeep doesn't cache these files but it is however 
+xsd files. By default Zeep doesn't cache these files but it is however
 advised to enable this for performance reasons.
 
 Please see :ref:`transport_caching` how to enable this. To make it easy to
-use the ``zeep.CachingClient()`` automatically creates a Transport object 
+use the ``zeep.CachingClient()`` automatically creates a Transport object
 with SqliteCache enabled.
 
 
@@ -49,7 +49,7 @@ For example to let zeep return the raw response directly instead of processing
 it you can do the following:
 
 .. code-block:: python
-    
+
     from zeep import Client
     from zeep import xsd
 
@@ -69,7 +69,7 @@ The ServiceProxy object
 The ServiceProxy object is a simple object which will check if an operation
 exists for attribute or item requested.  If the operation exists then it will
 return an OperationProxy object (callable) which is responsible for calling the
-operation on the binding. 
+operation on the binding.
 
 
 .. code-block:: python
@@ -82,12 +82,12 @@ operation on the binding.
     # service is a ServiceProxy object.  It will check if there
     # is an operation with the name `X` defined in the binding
     # and if that is the case it will return an OperationProxy
-    client.service.X()  
+    client.service.X()
 
-    # The operation can also be called via an __getitem__ call. 
-    # This is usefull if the operation name is not a valid 
+    # The operation can also be called via an __getitem__ call.
+    # This is usefull if the operation name is not a valid
     # python attribute name.
-    client.service['X-Y']()  
+    client.service['X-Y']()
 
 
 Using non-default bindings
@@ -112,7 +112,7 @@ Creating new ServiceProxy objects
 ---------------------------------
 There are situations where you either need to change the SOAP address from the
 one which is defined within the WSDL or the WSDL doesn't define any service
-elements. This can be done by creating a new ServiceProxy using the 
+elements. This can be done by creating a new ServiceProxy using the
 ``Client.create_service()`` method.
 
 .. code-block:: python
@@ -125,4 +125,19 @@ elements. This can be done by creating a new ServiceProxy using the
         '{http://my-target-namespace-here}myBinding',
         'http://my-endpoint.com/acceptance/')
 
-    service.submit('something') 
+    service.submit('something')
+
+
+Creating the raw XML documents
+------------------------------
+When you want zeep to build and return the XML instead of sending it to the
+server you can use the ``Client.create_message()`` call. It requires then
+ServiceProxy as first argument and the operation name as second argument.
+
+
+.. code-block:: python
+
+    from zeep import Client
+
+    client = Client('http://my-endpoint.com/production.svc?wsdl')
+    node = client.create_message(client.service, 'myOperation', user='hi')
